Updating to paths instead of subdomains as a stopgap solution to the HTTP 421 problem for the time being.

--- a/cdn/css/styles.css
+++ b/cdn/css/styles.css
@@ -133,13 +133,13 @@ section.subSectionEnd {
 }
 
 .mixer {
-  background-image: url(https://cdn.mazureth.com/images/mixer.webp);
+  background-image: url(https://mazureth.com/cdn/images/mixer.webp);
   background-position: 50% 0px;
   position: relative;
 }
 
 .mixer.noWebp {
-  background-image: url(https://cdn.mazureth.com/images/mixer.jpg);
+  background-image: url(https://mazureth.com/cdn/images/mixer.jpg);
 }
 
 .mixer img {
